# geeks_pos

./: .gitignore  customization.md
backend/: check_admin_user.py  clear_and_seed_appliances.py  geeks_pos_backend.spec  requirements.txt  test_suppliers_api.py  verify_users.py
backend/accounts/: admin.py  views.py
backend/catalog/: low_stock.py  models.py  product_validation.py  search.py  serial_services.py  serializers.py  services.py  size_presets.py  specification_services.py  supplier_services.py  urls.py  views.py
backend/config/: api_urls.py  settings.py
backend/expenses/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/integrations/: services.py  views.py
backend/inventory/: serializers.py  views.py
backend/printing/: models.py  receipt.py  serializers.py  setup_views.py  views.py
backend/reports/: services.py  views.py
backend/sales/: history_meta.py  models.py  refund_utils.py  return_state.py  serializers.py  services.py  urls.py  views.py
backend/scripts/: build_sidecar.ps1
backend/setup/: urls.py
backend/tests/: TEST_AUTH_NOTE.txt  test_auth_role_resolution.py  test_clothing_sizes.py  test_debt_payment.py  test_expenses_api.py  test_integrations_auto_and_whatsapp.py  test_licensing_activate_mapping.py  test_licensing_middleware.py  test_monoblock_ops.py  test_notification_queue.py  test_order_discount_return.py  (+11 more)
docs/: PRODUCTION_POST_INSTALL.md
frontend/: add_missing_keys.cjs  find_untranslated.cjs  package-lock.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+59 files in other folders)
