[package]
name = "geeks-pos"
version = "0.1.0"
description = "GEEKS POS - Point of Sale System"
authors = ["GEEKS"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[[bin]]
name = "geeks-pos"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.5", features = [ "http-request", "window-all", "shell-open", "dialog"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Printing",
  "Win32_System_Power",
] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
